axum-macros/tests/debug_handler/fail/generics_no_with.stderr
error: Generic param is missing a specialization in `#[axum_macros::debug_handler]`. Specify each generic param at least once using `#[debug_handler(with(T = ConcreteType))]`.
 --> tests/debug_handler/fail/generics_no_with.rs:4:18
  |
4 | async fn handler<T>(extract: T) {}
  |                  ^
